--- a/final.css
+++ b/final.css
@@ -17,6 +17,8 @@ body {
     display: flex;
     flex-direction: column;
     text-align: center;
+    font-family: 'Georgia', 'helvetica';
+    font-size: 40px;
   }
 
   .main {
@@ -30,11 +32,25 @@ body {
     width: 100%
   }
 
+  .legend {
+    width: 200px;
+    font-size: 12px;
+    color: #f5eded;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    padding: 5px 5px;
+    background-color: rgba(146, 6, 6, 0.799);
+    box-shadow: 0 0 5px rgba(0,0,0,0.2);
+    border-radius: 5px;
+    border: 1px solid rgb(133, 3, 3);
+}
+
   .content {
     flex-direction: column;
-    width: 500px;
+    width: 300px;
     padding-left: 1rem;
     padding-right: 1rem;
+    font-family: 'Georgia', 'helvetica';
+    font-size: 15px;
     background-color: rgb(255, 254, 254);
     color: rgb(14, 12, 12);
 }
